[V1] INTEGRATION BECOME AN AUTHOR
